[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/font/early_gameboy/Early GameBoy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Game Assets/Assets v2/Icons/exit-icon.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/buildings/atlas_48x.png" type="Texture" id=3]
[ext_resource path="res://assets/Game Assets/Assets v2/Icons/exit-icon-pressed.png" type="Texture" id=4]
[ext_resource path="res://scripts/auditionMiniGame1.gd" type="Script" id=5]
[ext_resource path="res://assets/user interface/piano-minigame-bg.png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]
0/name = "atlas_48x.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 528, 48, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "atlas_48x.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 528, 48, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "atlas_48x.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 576, 48, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "atlas_48x.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 624, 48, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "atlas_48x.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 672, 48, 48 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "atlas_48x.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 672, 48, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "atlas_48x.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 96, 720, 48, 48 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "atlas_48x.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 288, 48, 48 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "atlas_48x.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1680, 480, 48, 48 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "atlas_48x.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 96, 288, 48, 48 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="auditionMiniGame1" type="Node2D"]
position = Vector2( 112, 88 )
scale = Vector2( 0.78493, 0.78493 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -407.68
margin_top = -285.376
margin_right = 1512.32
margin_bottom = 794.624
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 32, -16 )
tile_set = SubResource( 1 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 536870913, 0, 65551, 1, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 536870913, 0, 65556, 8, 0, 131072, 3, 0, 131073, 7, 0, 131074, 7, 0, 131075, 7, 0, 131076, 7, 0, 131077, 7, 0, 131078, 7, 0, 131079, 7, 0, 131080, 7, 0, 131081, 7, 0, 131082, 7, 0, 131083, 7, 0, 131084, 7, 0, 131085, 7, 0, 131086, 536870915, 0, 131087, 3, 0, 131088, 7, 0, 131089, 7, 0, 131090, 7, 0, 131091, 536870915, 0, 131092, 8, 0, 196608, 3, 0, 196609, 536870919, 0, 196610, 536870919, 0, 196611, 536870919, 0, 196612, 536870919, 0, 196613, 536870919, 0, 196614, 536870919, 0, 196615, 536870919, 0, 196616, 536870919, 0, 196617, 536870919, 0, 196618, 536870919, 0, 196619, 536870919, 0, 196620, 536870919, 0, 196621, 536870919, 0, 196622, 536870915, 0, 196623, 3, 0, 196624, 7, 0, 196625, 7, 0, 196626, 7, 0, 196627, 536870915, 0, 196628, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 262156, 8, 0, 262157, 8, 0, 262158, 8, 0, 262159, 8, 0, 262160, 8, 0, 262161, 8, 0, 262162, 8, 0, 262163, 8, 0, 262164, 8, 0, 262165, 8, 0, 262166, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589840, 8, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 786426, 8, 0, 786427, 8, 0, 786428, 8, 0, 786429, 8, 0, 786430, 8, 0, 786431, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 8, 0, 786444, 8, 0, 786445, 8, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( 32, -16 )
tile_set = SubResource( 1 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( 15, 8, 0, 16, 8, 0, 17, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65555, 8, 0, 65556, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 7, 0, 131082, 7, 0, 131083, 8, 0, 131084, 8, 0, 131085, 8, 0, 131086, 8, 0, 131087, 8, 0, 131088, 8, 0, 131089, 8, 0, 131090, 8, 0, 131091, 8, 0, 131092, 8, 0, 196608, 1, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 536870913, 0, 196628, 8, 0, 262144, 3, 0, 262145, 536870919, 0, 262146, 536870919, 0, 262147, 536870919, 0, 262148, 536870919, 0, 262149, 536870919, 0, 262150, 536870919, 0, 262151, 536870919, 0, 262152, 536870919, 0, 262153, 536870919, 0, 262154, 536870919, 0, 262155, 536870919, 0, 262156, 536870919, 0, 262157, 536870919, 0, 262158, 536870919, 0, 262159, 536870919, 0, 262160, 536870919, 0, 262161, 536870919, 0, 262162, 536870919, 0, 262163, 536870915, 0, 262164, 8, 0, 262165, 8, 0, 262166, 8, 0, 327680, 3, 0, 327681, 536870919, 0, 327682, 536870919, 0, 327683, 536870919, 0, 327684, 536870919, 0, 327685, 536870919, 0, 327686, 536870919, 0, 327687, 536870919, 0, 327688, 536870919, 0, 327689, 536870919, 0, 327690, 536870919, 0, 327691, 536870919, 0, 327692, 536870919, 0, 327693, 536870919, 0, 327694, 536870919, 0, 327695, 536870919, 0, 327696, 536870919, 0, 327697, 536870919, 0, 327698, 536870919, 0, 327699, 536870915, 0, 393216, 3, 0, 393217, 536870919, 0, 393218, 536870919, 0, 393219, 536870919, 0, 393220, 536870919, 0, 393221, 536870919, 0, 393222, 536870919, 0, 393223, 536870919, 0, 393224, 536870919, 0, 393225, 536870919, 0, 393226, 536870919, 0, 393227, 536870919, 0, 393228, 536870919, 0, 393229, 536870919, 0, 393230, 536870919, 0, 393231, 536870919, 0, 393232, 536870919, 0, 393233, 536870919, 0, 393234, 536870919, 0, 393235, 536870915, 0, 458752, 5, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 536870917, 0 )

[node name="Label" type="Label" parent="."]
margin_left = 104.0
margin_top = 96.0
margin_right = 465.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.423529, 0.32549, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "piano keys"

[node name="randomArrows" type="Label" parent="."]
margin_left = 856.0
margin_top = 96.0
margin_right = 906.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0.819608, 0.509804, 0.0705882, 1 )
custom_colors/font_outline_modulate = Color( 0.423529, 0.32549, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "w"

[node name="mess" type="RichTextLabel" parent="."]
margin_left = 112.0
margin_top = 216.0
margin_right = 912.0
margin_bottom = 286.0
custom_fonts/normal_font = SubResource( 3 )
text = "Sample Message"

[node name="mess2" type="RichTextLabel" parent="."]
margin_left = 112.0
margin_top = 184.0
margin_right = 912.0
margin_bottom = 219.0
custom_colors/default_color = Color( 0.25098, 0.247059, 0.247059, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Sample Message"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 856.0
margin_top = 360.0
margin_right = 1086.0
margin_bottom = 590.0
rect_scale = Vector2( 0.444249, 0.444249 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 96.0
margin_top = 392.0
margin_right = 832.0
margin_bottom = 528.0
custom_fonts/normal_font = SubResource( 5 )
text = "Instruction:

	Type the corresponding letter once the letter is shown properly. Typing without the letter displayed properly shown results innacurate scoring."

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
